@@ -29,7 +29,6 @@ import static org.opencastproject.job.api.AbstractJobProducer.ACCEPT_JOB_LOADS_E
 import static org.opencastproject.job.api.AbstractJobProducer.DEFAULT_ACCEPT_JOB_LOADS_EXCEEDING;
 import static org.opencastproject.job.api.Job.FailureReason.DATA;
 import static org.opencastproject.job.api.Job.Status.FAILED;
-import static org.opencastproject.job.jpa.JpaJob.fnToJob;
 import static org.opencastproject.security.api.SecurityConstants.ORGANIZATION_HEADER;
 import static org.opencastproject.security.api.SecurityConstants.USER_HEADER;
 import static org.opencastproject.serviceregistry.api.ServiceState.ERROR;
@@ -49,6 +48,7 @@ import org.opencastproject.security.api.TrustedHttpClientException;
 import org.opencastproject.security.api.User;
 import org.opencastproject.security.api.UserDirectoryService;
 import org.opencastproject.serviceregistry.api.HostRegistration;
+import org.opencastproject.serviceregistry.api.HostStatistics;
 import org.opencastproject.serviceregistry.api.IncidentService;
 import org.opencastproject.serviceregistry.api.Incidents;
 import org.opencastproject.serviceregistry.api.JaxbServiceStatistics;
@@ -975,15 +975,6 @@ public class ServiceRegistryJpaImpl implements ServiceRegistry, ManagedService {
     return job;
   }
 
-  private Fn<JpaJob, JpaJob> fnSetJobUri() {
-    return new Fn<JpaJob, JpaJob>() {
-      @Override
-      public JpaJob apply(JpaJob job) {
-        return setJobUri(job);
-      }
-    };
-  }
-
   /**
    * Internal method to update a job, throwing unwrapped JPA exceptions.
    *
@@ -1670,6 +1661,32 @@ public class ServiceRegistryJpaImpl implements ServiceRegistry, ManagedService {
     }
   }
 
+  @Override
+  public HostStatistics getHostStatistics() {
+    HostStatistics statistics = new HostStatistics();
+    EntityManager em = null;
+    try {
+      em = emf.createEntityManager();
+      List<Object[]> results = em.createNamedQuery("HostRegistration.jobStatistics", Object[].class)
+          .setParameter("status", Arrays.asList(Status.QUEUED.ordinal(), Status.RUNNING.ordinal()))
+          .getResultList();
+      for (Object[] row: results) {
+        final long host = ((Number) row[0]).longValue();
+        final int status = ((Number) row[1]).intValue();
+        final long count = ((Number) row[2]).longValue();
+        if (status == Status.RUNNING.ordinal()) {
+          statistics.addRunning(host, count);
+        } else {
+          statistics.addQueued(host, count);
+        }
+      }
+    } finally {
+      if (em != null)
+        em.close();
+    }
+    return statistics;
+  }
+
   /**
    * Gets all host registrations
    *
@@ -1714,16 +1731,10 @@ public class ServiceRegistryJpaImpl implements ServiceRegistry, ManagedService {
       if (jobs.size() == 0) {
         jobs = getChildren(em, id);
       }
-      return $(jobs).sort(new Comparator<JpaJob>() {
-        @Override
-        public int compare(JpaJob job1, JpaJob job2) {
-          if (job1.getDateCreated() == null || job2.getDateCreated() == null) {
-            return 0;
-          } else {
-            return job1.getDateCreated().compareTo(job2.getDateCreated());
-          }
-        }
-      }).map(fnSetJobUri()).map(fnToJob()).toList();
+      return jobs.stream()
+          .map(this::setJobUri)
+          .map(JpaJob::toJob)
+          .collect(Collectors.toList());
     } catch (Exception e) {
       throw new ServiceRegistryException(e);
     } finally {
@@ -1774,7 +1785,9 @@ public class ServiceRegistryJpaImpl implements ServiceRegistry, ManagedService {
         setJobUri(job);
       }
 
-      return $(jobs).map(fnToJob()).toList();
+      return jobs.stream()
+          .map(JpaJob::toJob)
+          .collect(Collectors.toList());
     } catch (Exception e) {
       throw new ServiceRegistryException(e);
     } finally {
